feat: atualizar estatísticas do portal do cliente

--- a/portal-cliente.html
+++ b/portal-cliente.html
@@ -38,7 +38,7 @@
             </div>
 
             <!-- Statistics Dashboard -->
-            <div id="stats-container"></div>
+            <div id="stats-container" class="stats-grid premium-stats-grid"></div>
 
             <!-- Navigation Tabs -->
             <div class="section-tabs">
