Refine appointment cards and add detail modal

--- a/portal-cliente.html
+++ b/portal-cliente.html
@@ -292,6 +292,18 @@
         </div>
     </main>
 
+    <!-- Appointment Details Modal -->
+    <div id="appointment-details-modal" class="modal" role="dialog" aria-modal="true" aria-hidden="true">
+        <div class="modal-content" role="document">
+            <button type="button" class="modal-close" aria-label="Fechar detalhes" id="appointment-modal-close-icon">&times;</button>
+            <h2 class="modal-header" id="appointment-modal-title">Detalhes do agendamento</h2>
+            <div class="modal-body" id="appointment-modal-body"></div>
+            <div class="modal-footer">
+                <button type="button" class="modal-btn modal-btn-secondary" id="appointment-modal-close">Fechar</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer class="main-footer">
         <div class="container footer-grid">
