--- a/config-perfil.html
+++ b/config-perfil.html
@@ -8,158 +8,11 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-improvements.css">
     <link rel="stylesheet" href="css/auth.css">
+    <link rel="stylesheet" href="css/config-perfil.css">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
-    <!-- Internal Styles -->
-    <style>
-        .perfil-main {
-            padding-top: 120px;
-            padding-bottom: 80px;
-            background-color: var(--color-light-gray);
-            min-height: 100vh;
-        }
-
-        .perfil-container {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .perfil-header {
-            background: linear-gradient(135deg, var(--color-cyan) 0%, #008f83 100%);
-            color: white;
-            padding: 30px;
-            border-radius: 8px;
-            margin-bottom: 30px;
-            text-align: center;
-        }
-
-        .perfil-card {
-            background-color: white;
-            padding: 40px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-            margin-bottom: 20px;
-        }
-
-        .perfil-card h2 {
-            margin-bottom: 25px;
-            color: var(--color-graphite);
-            font-size: 1.5em;
-            border-bottom: 2px solid var(--color-light-gray);
-            padding-bottom: 15px;
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-        .form-group label {
-            display: block;
-            font-weight: 700;
-            margin-bottom: 8px;
-            color: var(--color-graphite);
-        }
-
-        .form-group input {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            font-size: 1em;
-        }
-
-        .form-group input:focus {
-            outline: none;
-            border-color: var(--color-cyan);
-        }
-
-        .form-group input:disabled {
-            background-color: #f5f5f5;
-            cursor: not-allowed;
-        }
-
-        .btn-group {
-            display: flex;
-            gap: 15px;
-            margin-top: 30px;
-        }
-
-        .btn {
-            padding: 12px 24px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: 700;
-            font-size: 1em;
-            transition: all 0.3s;
-        }
-
-        .btn-primary {
-            background-color: var(--color-cyan);
-            color: white;
-            flex: 1;
-        }
-
-        .btn-primary:hover {
-            background-color: #008f83;
-        }
-
-        .btn-secondary {
-            background-color: #e5e7eb;
-            color: var(--color-graphite);
-        }
-
-        .btn-secondary:hover {
-            background-color: #d1d5db;
-        }
-
-        .btn-danger {
-            background-color: #e74c3c;
-            color: white;
-        }
-
-        .btn-danger:hover {
-            background-color: #c0392b;
-        }
-
-        .info-box {
-            background-color: #e3f2fd;
-            border-left: 4px solid #2196f3;
-            padding: 15px;
-            border-radius: 5px;
-            margin-bottom: 20px;
-        }
-
-        .success-message {
-            background-color: #d4edda;
-            border-left: 4px solid #28a745;
-            padding: 15px;
-            border-radius: 5px;
-            margin-bottom: 20px;
-            display: none;
-        }
-
-        .error-message {
-            background-color: #f8d7da;
-            border-left: 4px solid #dc3545;
-            padding: 15px;
-            border-radius: 5px;
-            margin-bottom: 20px;
-            display: none;
-        }
-
-        @media (max-width: 768px) {
-            .perfil-card {
-                padding: 25px 20px;
-            }
-
-            .btn-group {
-                flex-direction: column;
-            }
-        }
-    </style>
 </head>
 <body>
 
@@ -185,91 +38,168 @@
                 <p>Gerencie suas informações pessoais</p>
             </div>
 
-            <div id="success-msg" class="success-message"></div>
-            <div id="error-msg" class="error-message"></div>
+            <div id="success-msg" class="feedback-message success-message" role="alert"></div>
+            <div id="error-msg" class="feedback-message error-message" role="alert"></div>
 
-            <!-- Personal Data -->
             <div class="perfil-card">
-                <h2>👤 Dados Pessoais</h2>
+                <nav class="tabs-nav" role="tablist">
+                    <button type="button" class="tab-btn active" data-tab-target="personal" role="tab" aria-selected="true">👤 Dados pessoais</button>
+                    <button type="button" class="tab-btn" data-tab-target="addresses" role="tab" aria-selected="false">🏠 Endereços</button>
+                    <button type="button" class="tab-btn" data-tab-target="password" role="tab" aria-selected="false">🔐 Alterar senha</button>
+                    <button type="button" class="tab-btn" data-tab-target="danger" role="tab" aria-selected="false">⚠️ Excluir conta</button>
+                </nav>
 
-                <form id="perfil-form">
-                    <div class="form-group">
-                        <label for="nome">Nome Completo</label>
-                        <input type="text" id="nome" required>
-                    </div>
+                <section class="tab-panel active" data-tab="personal" role="tabpanel">
+                    <h2 class="section-heading"><span>👤</span>Dados pessoais</h2>
+                    <form id="perfil-form">
+                        <div class="form-grid">
+                            <div class="form-group">
+                                <label for="nome">Nome completo</label>
+                                <input type="text" id="nome" name="nome" autocomplete="name" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="whatsapp">WhatsApp</label>
+                                <input type="tel" id="whatsapp" name="whatsapp" placeholder="(31) 99999-9999" autocomplete="tel" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">E-mail</label>
+                                <input type="email" id="email" name="email" autocomplete="email" disabled>
+                                <small>O e-mail não pode ser alterado.</small>
+                            </div>
+                            <div class="form-group">
+                                <label for="perfil-cep">CEP</label>
+                                <input type="text" id="perfil-cep" name="cep" inputmode="numeric" maxlength="9" autocomplete="postal-code">
+                            </div>
+                            <div class="form-group">
+                                <label for="perfil-rua">Rua</label>
+                                <input type="text" id="perfil-rua" name="rua" autocomplete="address-line1">
+                            </div>
+                            <div class="form-group">
+                                <label for="perfil-numero">Número</label>
+                                <input type="text" id="perfil-numero" name="numero" autocomplete="address-line2">
+                            </div>
+                            <div class="form-group">
+                                <label for="perfil-complemento">Complemento</label>
+                                <input type="text" id="perfil-complemento" name="complemento" autocomplete="address-line2">
+                            </div>
+                            <div class="form-group">
+                                <label for="perfil-bairro">Bairro</label>
+                                <input type="text" id="perfil-bairro" name="bairro" autocomplete="address-level3">
+                            </div>
+                            <div class="form-group">
+                                <label for="perfil-cidade">Cidade</label>
+                                <input type="text" id="perfil-cidade" name="cidade" autocomplete="address-level2">
+                            </div>
+                            <div class="form-group">
+                                <label for="perfil-estado">Estado</label>
+                                <input type="text" id="perfil-estado" name="estado" maxlength="2" autocomplete="address-level1">
+                            </div>
+                        </div>
+                        <div class="btn-row">
+                            <button type="button" class="btn btn-secondary" id="perfil-cancelar-btn">Cancelar</button>
+                            <button type="submit" class="btn btn-primary">💾 Salvar alterações</button>
+                        </div>
+                    </form>
+                </section>
 
-                    <div class="form-group">
-                        <label for="whatsapp">WhatsApp</label>
-                        <input type="tel" id="whatsapp" placeholder="(31) 99999-9999" required>
+                <section class="tab-panel" data-tab="addresses" role="tabpanel" aria-hidden="true">
+                    <h2 class="section-heading"><span>🏠</span>Endereços</h2>
+                    <div class="note-box">
+                        Clique em um endereço para defini-lo como principal. Você pode adicionar apelidos para identificar cada local facilmente.
                     </div>
+                    <div class="addresses-header">
+                        <p class="addresses-info">Gerencie os locais onde nossos serviços serão realizados.</p>
+                        <button type="button" class="btn btn-primary" id="add-address-btn">➕ Novo endereço</button>
+                    </div>
+                    <div id="addresses-list" class="addresses-list"></div>
+                    <form id="address-form" class="address-form hidden">
+                        <h3 class="section-heading"><span>📝</span><span id="address-form-title">Novo endereço</span></h3>
+                        <input type="hidden" id="address-id">
+                        <div class="form-grid">
+                            <div class="form-group">
+                                <label for="address-nome">Nome do endereço</label>
+                                <input type="text" id="address-nome" name="nome_endereco" placeholder="Ex.: Casa, Trabalho" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="address-tipo">Tipo do imóvel</label>
+                                <select id="address-tipo" name="tipo_imovel" required>
+                                    <option value="residencial">Residencial</option>
+                                    <option value="comercial">Comercial</option>
+                                    <option value="condominio">Condomínio</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="address-cep">CEP</label>
+                                <input type="text" id="address-cep" name="cep" inputmode="numeric" maxlength="9" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="address-rua">Rua</label>
+                                <input type="text" id="address-rua" name="rua" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="address-numero">Número</label>
+                                <input type="text" id="address-numero" name="numero" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="address-complemento">Complemento</label>
+                                <input type="text" id="address-complemento" name="complemento">
+                            </div>
+                            <div class="form-group">
+                                <label for="address-bairro">Bairro</label>
+                                <input type="text" id="address-bairro" name="bairro" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="address-cidade">Cidade</label>
+                                <input type="text" id="address-cidade" name="cidade" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="address-estado">Estado</label>
+                                <input type="text" id="address-estado" name="estado" maxlength="2" required>
+                            </div>
+                        </div>
+                        <div class="address-form-actions">
+                            <button type="button" class="btn btn-secondary" id="cancel-address-btn">Cancelar</button>
+                            <button type="submit" class="btn btn-primary">Salvar endereço</button>
+                        </div>
+                    </form>
+                </section>
 
-                    <div class="form-group">
-                        <label for="endereco">Endereço Completo</label>
-                        <input type="text" id="endereco" placeholder="Rua, Número, Bairro, Cidade" required>
+                <section class="tab-panel" data-tab="password" role="tabpanel" aria-hidden="true">
+                    <h2 class="section-heading"><span>🔐</span>Alterar senha</h2>
+                    <div class="note-box">
+                        Após confirmar a nova senha, você será desconectado por segurança e precisará entrar novamente.
                     </div>
+                    <form id="senha-form">
+                        <div class="form-grid">
+                            <div class="form-group">
+                                <label for="senha-atual">Senha atual</label>
+                                <input type="password" id="senha-atual" name="senha_atual" minlength="6" autocomplete="current-password" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="senha-nova">Nova senha</label>
+                                <input type="password" id="senha-nova" name="senha_nova" minlength="6" autocomplete="new-password" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="senha-confirma">Confirmar nova senha</label>
+                                <input type="password" id="senha-confirma" name="senha_confirma" minlength="6" autocomplete="new-password" required>
+                            </div>
+                        </div>
+                        <div class="btn-row">
+                            <button type="submit" class="btn btn-primary">🔑 Alterar senha</button>
+                        </div>
+                    </form>
+                </section>
 
-                    <div class="form-group">
-                        <label for="email">E-mail</label>
-                        <input type="email" id="email" disabled>
-                        <small style="color: #666; font-size: 0.9em;">O e-mail não pode ser alterado</small>
+                <section class="tab-panel" data-tab="danger" role="tabpanel" aria-hidden="true">
+                    <h2 class="section-heading"><span>⚠️</span>Excluir conta</h2>
+                    <div class="danger-panel">
+                        <h3>Zona de perigo</h3>
+                        <p>Esta ação é permanente e removerá todos os seus dados do Apex Care, incluindo agendamentos e endereços cadastrados.</p>
+                        <p>Caso exista algum agendamento com status pendente ou ativo, a exclusão não será permitida.</p>
+                        <button type="button" class="btn btn-danger" id="delete-account-btn">🗑️ Excluir minha conta</button>
                     </div>
-
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-secondary" onclick="window.location.href='portal-cliente.html'">
-                            Cancelar
-                        </button>
-                        <button type="submit" class="btn btn-primary">
-                            💾 Salvar Alterações
-                        </button>
-                    </div>
-                </form>
+                </section>
             </div>
-
-            <!-- Change Password -->
-            <div class="perfil-card">
-                <h2>🔐 Alterar Senha</h2>
-
-                <div class="info-box">
-                    <strong>ℹ️ Importante:</strong> Após alterar a senha, você será desconectado e precisará fazer login novamente.
-                </div>
-
-                <form id="senha-form">
-                    <div class="form-group">
-                        <label for="senha-atual">Senha Atual</label>
-                        <input type="password" id="senha-atual" minlength="6">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="senha-nova">Nova Senha</label>
-                        <input type="password" id="senha-nova" minlength="6">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="senha-confirma">Confirmar Nova Senha</label>
-                        <input type="password" id="senha-confirma" minlength="6">
-                    </div>
-
-                    <div class="btn-group">
-                        <button type="submit" class="btn btn-primary">
-                            🔑 Alterar Senha
-                        </button>
-                    </div>
-                </form>
-            </div>
-
-            <!-- Danger Zone -->
-            <div class="perfil-card" style="border: 2px solid #e74c3c;">
-                <h2 style="color: #e74c3c;">⚠️ Zona de Perigo</h2>
-
-                <div class="info-box" style="background-color: #fff3cd; border-color: #ffc107;">
-                    <strong>⚠️ Atenção:</strong> Esta ação é irreversível. Todos os seus dados e agendamentos serão permanentemente excluídos.
-                </div>
-
-                <button class="btn btn-danger" onclick="deleteAccount()">
-                    🗑️ Excluir Minha Conta
-                </button>
-            </div>
-
         </div>
     </main>
 
@@ -287,11 +217,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script type="module">
-        import { supabase } from './js/supabase-client.js';
-
-        // ... (JavaScript code)
-    </script>
+    <script type="module" src="js/config-perfil.js"></script>
     <script type="module" src="js/shared-improved.js"></script>
 
 </body>
