Add interactive promotion guidance to budget flow

--- a/orcamento.html
+++ b/orcamento.html
@@ -161,6 +161,9 @@
                             <div id="service-selection" class="service-grid">
                                 <!-- Services loaded dynamically -->
                             </div>
+                            <div id="promotion-opportunities" class="promotion-opportunities" aria-live="polite">
+                                <p class="promotion-opportunities__empty">Selecione serviços para descobrir promoções e combos disponíveis.</p>
+                            </div>
                             <div class="step-actions">
                                 <button class="ghost-button" data-action="prev">Voltar</button>
                                 <button class="cta-button-hero" data-action="next">Próximo</button>
