--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li><a href="#metodo">O Método</a></li>
                 <li><a href="#planos">Planos</a></li>
                 <li><a href="#sobre">Sobre</a></li>
+                <li><a href="promocoes.html">Promoções</a></li>
             </ul>
             <div id="auth-container" class="auth-container-header"></div>
         </nav>
@@ -206,6 +207,7 @@
                     <li><a href="#metodo">O Método</a></li>
                     <li><a href="#planos">Planos</a></li>
                     <li><a href="#sobre">Sobre Nós</a></li>
+                    <li><a href="promocoes.html">Promoções</a></li>
                 </ul>
             </div>
             <div class="footer-col">
